--- a/eTickets_Web/Views/Movies/Index.cshtml
+++ b/eTickets_Web/Views/Movies/Index.cshtml
@@ -1,14 +1,89 @@
 ﻿@model IEnumerable<eTickets_Web.Models.Movie>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "List of Movies";
 }
 
-<h1>Index</h1>
+<h1>List of Movies</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Yeni Kayıt</a>
 </p>
+@* Bootstrap Card View *@
+<div class="row">
+    @foreach (var item in Model)
+    {
+        <div class="col-md-4 col-xs-6 border-primary mb-3">
+            <div class="card mb-3" style="max-width:540px;">
+                <div class="row g-0">
+                    <div class="col-md-12">
+                        <div class="card-header text-white bg-info">
+                            <p class="card-text">
+                                <h5 class="card-title">
+                                    @item.Name
+                                    <a class="text-white float-end" asp-action="Edit" asp-route-itemid="@item.Id"><i class="bi bi-pencil-square"></i>
+                                    </a>
+                                    @* Kullanıcının Admin/User olma durumuna göre ????????????*@
+                                    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                                    {
+                                        <a class="text-white float-right" asp-action="Edit" asp-route-itemid="@item.Id"><i class="bi bi-pencil-square"></i></a>
+                                    }
+                                </h5>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <img src="@item.ImageURL" width="100%" alt="@item.Name" />
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card-body">
+                            <p class="card-text">@item.Description</p>
+                            <p class="card-text"><b>Oyn.Sinema Adı : </b>@item.Cinema.Name</p>
+                            <p class="card-text"><b>Kategorisi : </b>@item.MovieCategory</p>
+                            <p class="card-text"><b>Vizyon Tarihi : </b>@item.StartDate.ToString("dd MMM yyyy")</p>
+                            <p class="card-text"><b>Bitiş Tarihi : </b>@item.EndDate.ToString("dd MMM yyyy")</p>
+                            <p class="card-text">
+                                <b>Durum : </b>
+                                @if (DateTime.Now >= item.StartDate && DateTime.Now <= item.EndDate)
+                                {
+                                    <span class="badge bg-success text-white">GÖSTERİMDE</span>
+                                }
+                                else if (DateTime.Now > item.EndDate)
+                                {
+                                    <span class="badge bg-danger text-white">KALKTI</span>
+                                }
+                                else
+                                {
+                                    <span class="badge bg-primary text-white">GELECEK PROGRAM</span>
+                                }
+                            </p>
+                        </div>
+
+
+                    </div>
+
+                </div>
+
+
+            </div>
+
+        </div>
+        
+    }
+
+
+</div>
+
+
+
+
+
+
+
+
+@* =========================== *@
+
+@* 
 <table class="table">
     <thead>
         <tr>
@@ -43,7 +118,7 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+    @foreach (var item in Model) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
@@ -81,3 +156,5 @@
 }
     </tbody>
 </table>
+
+ *@
