--- a/eTickets_Web/Views/Producers/Index.cshtml
+++ b/eTickets_Web/Views/Producers/Index.cshtml
@@ -1,18 +1,19 @@
 ﻿@model IEnumerable<eTickets_Web.Models.Producer>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "List of Producers";
 }
 
-<h1>Index</h1>
+<h1>List of Producers</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Yeni Kayıt</a>
 </p>
 <table class="table">
     <thead>
-        <tr>
+        <tr class="text-center">
             <th>
+
                 @Html.DisplayNameFor(model => model.ProfilePictureURL)
             </th>
             <th>
@@ -21,25 +22,26 @@
             <th>
                 @Html.DisplayNameFor(model => model.Bio)
             </th>
-            <th></th>
+            <th>İşlemler</th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+    @foreach (var item in Model) {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.ProfilePictureURL)
+            <td class="align-middle">
+                <img class="rounded-circle" src="@item.ProfilePictureURL" alt="@item.FullName" style="max-width:50px" />
+                @* @Html.DisplayFor(modelItem => item.ProfilePictureURL) *@
             </td>
-            <td>
+            <td class="align-middle">
                 @Html.DisplayFor(modelItem => item.FullName)
             </td>
-            <td>
+            <td class="align-middle">
                 @Html.DisplayFor(modelItem => item.Bio)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id">Düzenle</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Detay</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Sil</a>
             </td>
         </tr>
 }
