--- a/eTickets_Web/Views/Movies/Index.cshtml
+++ b/eTickets_Web/Views/Movies/Index.cshtml
@@ -61,7 +61,7 @@
                         <div class="col-md-12">
                             <div class="card-footer">
                                 <p class="card-text">
-                                    <a class="btn btn-success text-white @((DateTime.Now > item.EndDate) ? "disabled" : "")" asp-controller="Orders" asp-action="AddItemToShoppingCart" asp-route-id="@item.Id>
+                                    <a class="btn btn-success text-white @((DateTime.Now) > item.EndDate) ? "disabled" : "")" asp-controller="Orders" asp-action="AddItemToShoppingCart" asp-route-id="@item.Id>
                                         <i class="bi bi-cart-plus"></i>Sepete Ekle (Fiyat @item.Price.ToString("c"))
 
 
