--- a/eTickets_Web/Views/Shared/_Layout.cshtml
+++ b/eTickets_Web/Views/Shared/_Layout.cshtml
@@ -39,17 +39,25 @@
                                     <a class="dropdown-item" asp-controller="Producers" asp-action="Index"><i class="bi bi-headset"></i> Producers</a>
                                 </div>                                
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" asp-controller="Actorss" asp-action="Index"><i class="bi bi-person-square"></i> Actors</a>
+                                    <a class="dropdown-item" asp-controller="Actors" asp-action="Index"><i class="bi bi-person-square"></i> Actors</a>
                                 </div>
 
                             </li>
 
-
-
                         }
-
-
                     </ul>
+                    @* Search section *@
+                    <form class="d-flex" asp-controller="Movies" asp-action="Filter">
+                        <input name="searchString" type="text" class="form-control" placeholder="Arama kelimesini giriniz..." aria-label="Recipient's name" aria-describedby="button-addon2"/>
+                        <span style="padding:5px"></span>
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="bi bi-search"></i></button>
+                    </form>
+                    @* Identity Section *@
+                    @* Burasını direk buraya tanımlamadan ayrı bir sayfa olarak hazırlayıp buraya gömecek şekilde hazırlayacağız *@
+                    @* Tanım olarak Partial View kullanımı örneği *@
+
+                    <partial name="_Identity.cshtml" />
+
                 </div>
             </div>
         </nav>
