--- a/eTickets_Web/Views/Shared/_Identity.cshtml
+++ b/eTickets_Web/Views/Shared/_Identity.cshtml
@@ -5,10 +5,27 @@
 {
     <span style="padding:15px;"></span>
 
-    <a class="btn btn-outline-succes my-2 my-sm-0" asp-controller="Account" asp-action="Login"><i class="bi bi-box-arrow-in-right"></i> Login</a>
+    <a class="btn btn-outline-success my-2 my-sm-0" asp-controller="Account" asp-action="Login"><i class="bi bi-box-arrow-in-right"></i> Login</a>
 
     <span style="padding:15px;"></span>
 
     <a class="btn btn-outline-primary my-2 my-sm-0" asp-controller="Account" asp-action="Register"><i class="bi bi-person-plus"></i> Register</a>
 
+}
+else
+{
+    @* User Profile Section *@
+
+    <div class="dropdown">
+        <span style="padding:5px"></span>
+        <button class="btn btn-outline-success dropdown-toogle" type="button" id="profile-btn" data-toggle="dropdown" aria-expanded="false">
+            <i class="bi bi-person-badge"></i> Hoşgeldin @UserManager.GetUserName(User)
+        </button>
+    </div>
+    <span style="padding:5px"></span>
+    <form asp-controller="Account" asp-action="Logout">
+        <button class="btn btn-outline-danger my-2 my-sm-0">
+            <i class="bi bi-box-arrow-in-left"></i> Logout
+        </button>
+    </form>
 }
