--- a/eTickets_Web/Views/Movies/Create.cshtml
+++ b/eTickets_Web/Views/Movies/Create.cshtml
@@ -1,4 +1,8 @@
-﻿@model eTickets_Web.Data.ViewModels.NewMovieVM
+﻿@using eTickets_Web.Data.Enums;
+
+@model eTickets_Web.Data.ViewModels.NewMovieVM
+
+
 
 
 
@@ -25,15 +29,14 @@
                                 <span asp-validation-for="Name" class="text-danger"></span>
                             </div>
                             <div class="form-group">
-                                <label asp-for="Name" class="control-label"></label>
-                                <input asp-for="Name" class="form-control" />
-                                <span asp-validation-for="Name" class="text-danger"></span>
+                                <label asp-for="StartDate" class="control-label"></label>
+                                <input asp-for="StartDate" class="form-control" />
+                                <span asp-validation-for="StartDate" class="text-danger"></span>
                             </div>
-
                             <div class="form-group">
-                                <label asp-for="Description" class="control-label"></label>
-                                <input asp-for="Description" class="form-control" />
-                                <span asp-validation-for="Description" class="text-danger"></span>
+                                <label asp-for="EndDate" class="control-label"></label>
+                                <input asp-for="EndDate" class="form-control" />
+                                <span asp-validation-for="EndDate" class="text-danger"></span>
                             </div>
                             <div class="form-group">
                                 <label asp-for="Price" class="control-label"></label>
@@ -45,39 +48,46 @@
                                 <input asp-for="ImageURL" class="form-control" />
                                 <span asp-validation-for="ImageURL" class="text-danger"></span>
                             </div>
-                            <div class="form-group">
-                                <label asp-for="StartDate" class="control-label"></label>
-                                <input asp-for="StartDate" class="form-control" />
-                                <span asp-validation-for="StartDate" class="text-danger"></span>
-                            </div>
-                            <div class="form-group">
-                                <label asp-for="EndDate" class="control-label"></label>
-                                <input asp-for="EndDate" class="form-control" />
-                                <span asp-validation-for="EndDate" class="text-danger"></span>
-                            </div>
-                            <div class="form-group">
-                                <label asp-for="MovieCategory" class="control-label"></label>
-                                <select asp-for="MovieCategory" class="form-control"></select>
-                                <span asp-validation-for="MovieCategory" class="text-danger"></span>
-                            </div>
+                        </div>
+                        <div class="col-md-6">
                             <div class="form-group">
                                 <label asp-for="CinemaId" class="control-label"></label>
                                 <select asp-for="CinemaId" class="form-control" asp-items="ViewBag.CinemaId"></select>
+                                <span asp-validation-for="CinemaId" class="text-danger"></span>
+
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="MovieCategory" class="control-label"></label>
+                                <select asp-for="MovieCategory" class="form-control" asp-items="Html.GetEnumSelectList<MovieCategory>()"></select>
+                                <span asp-validation-for="MovieCategory" class="text-danger"></span>
                             </div>
                             <div class="form-group">
                                 <label asp-for="ProducerId" class="control-label"></label>
                                 <select asp-for="ProducerId" class="form-control" asp-items="ViewBag.ProducerId"></select>
+                                <span asp-validation-for="ProducerId" class="text-danger"></span>
+
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="ActorIds" class="control-label"></label>
+                                <select asp-for="ActorIds" class="form-control" asp-items="ViewBag.Actors" multiple></select>
+                                <span asp-validation-for="ActorIds" class="text-danger"></span>
+
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="Description" class="control-label"></label>
+                                <input asp-for="Description" class="form-control" />
+                                <span asp-validation-for="Description" class="text-danger"></span>
                             </div>
                         </div>
-
-
+                    </div>
+                    <div class="col-md-4 offset-4 text-center">
+                        <img width="100%" id="ImageUrlPreview" />
                     </div>
 
 
-
-
-                    <div class="form-group">
-                        <input type="submit" value="Create" class="btn btn-primary" />
+                    <div class="form-group mt-3">
+                        <input type="submit" value="Create" class="btn btn-outline-success float-end" />
+                        <a class="btn btn-outline-secondary" asp-action="Index">Tümünü göster..</a>
                     </div>
                 </form>
 
@@ -90,10 +100,16 @@
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script>
+        $("#ImageURL").on("change", function () 
+        {
+            var output = document.getElementById("ImageUrlPreview");
+            output.src = $(this).values();
+        
+        }
+        
+
+        )
+    </script>
 }
