--- a/eTickets_Web/Views/Actors/Edit.cshtml
+++ b/eTickets_Web/Views/Actors/Edit.cshtml
@@ -1,44 +1,58 @@
-﻿@model eTickets_Web.Models.Actor
+﻿@model Actor
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Aktör bilgisi güncelleme";
 }
 
-<h1>Edit</h1>
+<div class="row text">
+    <div class="col-md-8 offset-2">
+        <h4>Actor Güncelleme</h4>
+    </div>
+    <div class="row">
+        <div class="col-md-8 offset-2">
+            <form asp-action="Edit">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-<h4>Actor</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="ProfilePictureURL" class="control-label"></label>
-                <input asp-for="ProfilePictureURL" class="form-control" />
-                <span asp-validation-for="ProfilePictureURL" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FullName" class="control-label"></label>
-                <input asp-for="FullName" class="form-control" />
-                <span asp-validation-for="FullName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Bio" class="control-label"></label>
-                <input asp-for="Bio" class="form-control" />
-                <span asp-validation-for="Bio" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+                <input type="hidden" asp-for="Id" />
+                
+                <div class="form-group text-center">
+                    <img id="ProfilePicturePreview" class="border-info rounded-circle" style="max-width:150px;"/>
+                </div>
+                <div class="form-group">
+                    <label asp-for="ProfilePictureURL" class="control-label"></label>
+                    <input asp-for="ProfilePictureURL" class="form-control" />
+                    <span asp-validation-for="ProfilePictureURL" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="FullName" class="control-label"></label>
+                    <input asp-for="FullName" class="form-control" />
+                    <span asp-validation-for="FullName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Bio" class="control-label"></label>
+                    <input asp-for="Bio" class="form-control" />
+                    <span asp-validation-for="Bio" class="text-danger"></span>
+                </div>
+                <div class="form-group mt-2">
+                    <input type="submit" value="Güncelle" class="btn btn-outline-success float-end" />
+                    <a class="btn btn-outline-secondary" asp-action="Index">Geri dön</a>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script>
+        $(document).ready(function () {
+            var output = document.getElementById('ProfilePicturePreview');
+            output.src = $("#ProfilePictureURL").val();
+        })
+
+        $("#ProfilePictureURL").on("change", function () {
+            var output = document.getElementById('ProfilePicturePreview');
+            output.src = $(this).val();
+        })
+    </script>
+
 }
