--- a/eTickets_Web/Views/Producers/Create.cshtml
+++ b/eTickets_Web/Views/Producers/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model eTickets_Web.Models.Producer
+﻿@model Producer
 
 @{
     ViewData["Title"] = "Create";
@@ -27,8 +27,9 @@
                 <input asp-for="Bio" class="form-control" />
                 <span asp-validation-for="Bio" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group mt-3">
+                <input type="submit" value="Create" class="btn btn-outline-success float-end" />
+                <a class="btn btn-outline-secondary" asp-action="Index">Geri dön</a>
             </div>
         </form>
     </div>
