--- a/eTickets_Web/Views/Cinemas/Index.cshtml
+++ b/eTickets_Web/Views/Cinemas/Index.cshtml
@@ -4,7 +4,12 @@
     ViewData["Title"] = "List of Cinemas";
 }
 
-@Html.Partial("_CreateItem", "Cinemas")
+@* Normalde burada partial view olacak *@
+<div style="position : fixed;left:25px;top:25px;" class="text-white">
+    <a asp-controller="Cinemas" asp-action="Create" class="btn btn-success">
+        <i class="bi bi-plus-circle"></i> Yeni Kayıt
+    </a>
+</div>
 
 
 <table class="table">
@@ -44,3 +49,5 @@
 }
     </tbody>
 </table>
+
+@* @Html.Partial("_CreateItem", "Cinemas") *@
