--- a/eTickets_Web/Views/Movies/Index.cshtml
+++ b/eTickets_Web/Views/Movies/Index.cshtml
@@ -6,7 +6,12 @@
 
 <h1>List of Movies</h1>
 
-@Html.Partial("_CreateItem","Movies")
+@* Normalde burada partial view olacak *@
+<div style="position : fixed;left:25px;top:25px;" class="text-white">
+    <a asp-controller="Movies" asp-action="Create" class="btn btn-success">
+        <i class="bi bi-plus-circle"></i> Yeni Kayıt
+    </a>
+</div>
 
 @* Bootstrap Card View *@
 <div class="row">
@@ -89,6 +94,7 @@
 
 </div>
 
+@* @Html.Partial("_CreateItem", "Movies") *@
 
 
 
