--- a/eTickets_Web/Views/Shared/_CreateItem.cshtml
+++ b/eTickets_Web/Views/Shared/_CreateItem.cshtml
@@ -1,10 +1,19 @@
 ﻿@model string;
 
-@if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+
+<div style="position : fixed;right:25px;bottom:25px;" class="text-white">
+    <a asp-controller="@Model" asp-action="Create" class="btn btn-success">
+        <i class="bi bi-plus-circle"></i> Yeni Kayıt
+    </a>
+</div>
+
+@* Identity kontrol edilecek 08.01.24_ük*@
+
+@* @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
 {
     <div style="position : fixed;right:25px;bottom:25px;" class="text-white">
         <a asp-controller="@Model" asp-action="Create" class="btn btn-success">
             <i class="bi bi-plus-circle"></i> Yeni Kayıt
         </a>
     </div>
-}
+} *@
